[fix] Fix register form posting to login endpoint

--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<form class="col-lg-6 col-sm-12 mx-auto" name="loginForm" method="POST" action="/login" novalidate>
+<form class="col-lg-6 col-sm-12 mx-auto" name="signupForm" method="POST" action="/register" novalidate>
     <h1>Sign Up</h1>
     {{ form.hidden_tag() }}
     <div class="mb-3">
