--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -1,3 +1,11 @@
-.btn_primary {
-    background-color: purple !important;
+.btn-primary,
+.btn-primary:visited {
+    background-color: #6f42c1 !important;
+    border-color    : #6f42c1 !important;
+}
+
+.btn-primary:active,
+.btn-primary:hover {
+    background-color: #6c39cc !important;
+    border-color    : #6c39cc !important;
 }
