--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Rentier</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -8,14 +8,14 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link {% if url_for(request.endpoint) == url_for('index') %} active {% endif %}" href="/">Home</a>
                 </li>
                 {% if session.user_id %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/prediction">Predict</a>
+                    <a class="nav-link {% if url_for(request.endpoint) == url_for('predict') %} active {% endif %}" href="/predict">Predict</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/history">History</a>
+                    <a class="nav-link {% if url_for(request.endpoint) == url_for('history') %} active {% endif %}" href="/history">History</a>
                 </li>
                 {% endif %}
             </ul>
