[refactor] Changed appearance of attribution links

--- a/application/templates/includes/footer.html
+++ b/application/templates/includes/footer.html
@@ -28,12 +28,12 @@
             </div>
             <div class="modal-body">
                 <ul>
-                    <li><a class="link-info" href="https://www.freepik.com/vectors/character">Character vector
+                    <li><a class="link-primary" href="https://www.freepik.com/vectors/character">Character vector
                             created by vectorjuice
                             -
                             www.freepik.com</a></li>
                     <li>
-                        <a class="link-info" href="https://www.freepik.com/vectors/abstract">Abstract vector created by vectorjuice -
+                        <a class="link-primary" href="https://www.freepik.com/vectors/abstract">Abstract vector created by vectorjuice -
                             www.freepik.com</a>
                     </li>
                 </ul>
