--- a/application/templates/predict.html
+++ b/application/templates/predict.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="row">
-    <div class="px-5 {% if results %} col-lg-6 col-sm-12 {% else %} col-12 {%endif %}">
+    <div class="px-5 col-lg-6 col-sm-12 mx-auto">
         <div class="card">
             <div class="card-body">
                 <form name="predictionForm" method="POST" action="/predict" novalidate>
