[refactor] Formatted all files

--- a/application/templates/includes/footer.html
+++ b/application/templates/includes/footer.html
@@ -33,7 +33,8 @@
                             -
                             www.freepik.com</a></li>
                     <li>
-                        <a class="link-primary" href="https://www.freepik.com/vectors/abstract">Abstract vector created by vectorjuice -
+                        <a class="link-primary" href="https://www.freepik.com/vectors/abstract">Abstract vector created
+                            by vectorjuice -
                             www.freepik.com</a>
                     </li>
                 </ul>
