--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -12,7 +12,7 @@
             AirBNB listing.
         </p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-left">
-            <a href="/register" class="btn btn-success btn-lg px-4 gap-3" >Register</a>
+            <a href="/register" class="btn btn-success btn-lg px-4 gap-3">Register</a>
             <a href="/login" class="btn btn-primary btn-lg px-4">Login</a>
         </div>
     </div>
@@ -22,7 +22,8 @@
 </div>
 <div class="row">
     <figure class="px-4 py-5 my-5 col-lg-5 d-sm-none d-lg-block">
-        <img src="{{ url_for('static', filename='images/Wavy_Tech-20_Single-08.png')}}" class="img-fluid" fluid" alt="Image">
+        <img src="{{ url_for('static', filename='images/Wavy_Tech-20_Single-08.png')}}" class="img-fluid" fluid"
+            alt="Image">
     </figure>
     <div class="px-4 py-5 my-5 col-lg-7 col-sm-12">
         <h2 class="display-6 fw-bold text-left">
