[fix] Fixed Jinja template error with confirm field

--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -24,7 +24,7 @@
     </div>
     <div class="mb-3">
         {{ form.confirm.label(class_='form-label') }}
-        {{ form.confirm.(class_='form-control')}}
+        {{ form.confirm(class_='form-control')}}
         {% for error in form.confirm.errors %}
         <span class="text-danger">{{ error }}</span>
         {% endfor %}
