--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -21,7 +21,7 @@
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
         {% for category, message in messages %}
-        <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
+        <div class="col-lg-7 mx-auto alert alert-{{category}} alert-dismissible fade show" role="alert">
             {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
         </div>
