[hack] Use for loop index instead of history id since history id is independent of user

--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -42,7 +42,7 @@
         </tr> -->
             {% for entry in history %}
             <tr>
-                <td>{{ entry.id }}</td>
+                <td>{{ loop.index }}</td>
                 <td>{{ entry.bedrooms }}</td>
                 <td>{{ entry.bathrooms }}</td>
                 <td>{{ entry.accomodates }}</td>
