--- a/application/templates/predict.html
+++ b/application/templates/predict.html
@@ -18,9 +18,9 @@
                 <form name="predictionForm" method="POST" action="/predict" novalidate>
                     {{ form.hidden_tag() }}
                     <div class="mb-3">
-                        {{ form.bedrooms.label(class_='form-label') }}
-                        {{ form.bedrooms(class_='form-control')}}
-                        {% for error in form.bedrooms.errors %}
+                        {{ form.beds.label(class_='form-label') }}
+                        {{ form.beds(class_='form-control')}}
+                        {% for error in form.beds.errors %}
                         <span class="text-danger">{{ error }}</span>
                         {% endfor %}
                     </div>
@@ -39,6 +39,13 @@
                         {% endfor %}
                     </div>
                     <div class="mb-3">
+                        {{ form.minimum_nights.label(class_='form-label') }}
+                        {{ form.minimum_nights(class_='form-control')}}
+                        {% for error in form.minimum_nights.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    <div class="mb-3">
                         {{ form.room_type.label(class_='form-label') }}
                         {{ form.room_type(class_='form-select')}}
                         {% for error in form.room_type.errors %}
@@ -51,6 +58,10 @@
                         {% for error in form.neighborhood.errors %}
                         <span class="text-danger">{{ error }}</span>
                         {% endfor %}
+                    </div>
+                    <div class="form-check">
+                        {{ form.wifi.label(class_='form-check-label') }}
+                        {{ form.wifi(class_='form-check-input' )}}
                     </div>
                     <div class="form-check">
                         {{ form.elevator.label(class_='form-check-label') }}
@@ -92,17 +103,15 @@
                 <h5 class="card-title fw-bold">The predicted rental fee is...</h5>
                 <p class="card-text text-center fs-5">${{price | default(0)|round(precision=2) }} per night
                     {% if actual_price %}
-                    which is ${{(actual_price - price)| default(0) | abs | round(precision=2)}}
-                    {% if actual_price < price %} more {% elif price> actual_price %}
-                        less
-                        {% else %}
-                        the same
-                        {% endif %}
-                        than the listing price
-                        {% endif %}
-                </p>
-                <a href="#explain" class="card-link">Why?</a>
-                <a href="/history" class="card-link">See history</a>
+                    which is
+                    {% if same %}
+                    the same
+                    {% else %}
+                    {{ price_diff | round(precision=2) }}
+                    {% if actual_price < price %} more {% else %} less {% endif %} {% endif %} as the listing price. {% endif %}
+                        </p>
+                        <a href="#explain" class="card-link">Why?</a>
+                        <a href="/history" class="card-link">See history</a>
             </div>
         </div>
     </div>
@@ -114,6 +123,18 @@
     <p class="lead">
         Want to know how the model predicted the price? See our breakdown below...
     </p>
+    <h3>How does the model take my features into account?</h3>
+    <div>
+        <!-- Model Interpreation Here-->
+    </div>
+</div>
+<div class="px-5 my-5 row">
+    <div class="col-lg-6">
+        <h3>How accurate is the model?</h3>
+        <p class="lead">
+            
+        </p>
+    </div>
 </div>
 {% endif %}
 {% endblock %}
