--- a/application/templates/includes/footer.html
+++ b/application/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="py-3 my-4">
+<footer class="py-3 my-4 container">
     <!-- <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
             <a href="/" class="nav-link px-2 text-muted">Home</a>
