[feat] Add custom page for HTTP status errors

--- a/application/templates/includes/footer.html
+++ b/application/templates/includes/footer.html
@@ -37,6 +37,10 @@
                             by vectorjuice -
                             www.freepik.com</a>
                     </li>
+                    <li>
+                        <a class="link-primary" href="https://www.freepik.com/vectors/people">People vector created by
+                            pch.vector - www.freepik.com</a>
+                    </li>
                 </ul>
 
 
