--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -8,16 +8,16 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link {% if url_for(request.endpoint) == url_for('index') %} active {% endif %}"
+                    <a class="nav-link {% if request.endpoint == 'index' %} active {% endif %}"
                         href="/">Home</a>
                 </li>
                 {% if session.user_id %}
                 <li class="nav-item">
-                    <a class="nav-link {% if url_for(request.endpoint) == url_for('predict') %} active {% endif %}"
+                    <a class="nav-link {% if request.endpoint == 'predict' %} active {% endif %}"
                         href="/predict">Predict</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if url_for(request.endpoint) == url_for('history') %} active {% endif %}"
+                    <a class="nav-link {% if request.endpoint == 'history' %} active {% endif %}"
                         href="/history">History</a>
                 </li>
                 {% endif %}
