[feat] Toast now changes header message based on category

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -23,14 +23,10 @@
         {% if messages %}
         <div class="toast-container position-absolute bottom-0 end-0 p-3">
             {% for category, message in messages %}
-            <!-- <div class="col-lg-7 mx-auto alert alert-{{category}} alert-dismissible fade show" role="alert">
-            {{ message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
-        </div> -->
             <div class="toast show fade" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header text-{{category}}">
                     <i class="bi bi-exclamation-circle-fill me-2 "></i>
-                    <strong class="me-auto">Error</strong>
+                    <strong class="me-auto">{% if category == "danger" %}Error {% elif category == "success" %}Success {%else%} Info {%endif%}</strong>
                     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="close"></button>
                 </div>
                 <div class="toast-body">
