[refactor] Removed word from error page

--- a/application/templates/error.html
+++ b/application/templates/error.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="px-4 py-3 my-3 col-lg-7 col-sm-12">
         <h1 class="display-5 fw-bold text-left">
-            Error: {{ error.code }} {{ error.name }}
+            {{ error.code }} {{ error.name }}
         </h1>
         <p class="lead mb-4">
             Looks like something went wrong! <br>
